<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_main"
        android:title="@string/main"
        android:orderInCategory="0"
        android:icon="@drawable/home_icon_black"/>

    <item android:id="@+id/nav_logging"
        android:title="@string/logging"
        android:orderInCategory="1"
        android:icon="@drawable/ic_log"/>

    <item android:id="@+id/nav_people"
        android:title="@string/member"
        android:orderInCategory="2"
        android:icon="@drawable/ic_people"/>

    <item android:id="@+id/nav_more"
        android:title="@string/other"
        android:orderInCategory="3"
        android:icon="@drawable/ic_more"/>

</menu>