<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/g_p_side"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_conn"
        android:textSize="@dimen/g_text_3"
        android:fontFamily="@font/muli_extra_bold"
        android:gravity="center" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lay_wifi_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wifi"
            android:textColor="@color/colorTextNormal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_wifi_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enable_wifi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sw_enable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_wifi" />

        <Switch
            android:id="@+id/sw_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/lay_wifi"
        android:layout_width="match_parent"
        android:layout_height="270dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_wifi"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_no_wifi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/no_wifi"
            android:gravity="center"
            android:textSize="@dimen/g_text_3"
            android:visibility="gone"/>

    </FrameLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine" />

    <LinearLayout
        android:id="@+id/lay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_refresh"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="@dimen/g_p_side"
            android:gravity="center"
            android:text="@string/refresh"
            android:textColor="@color/colorPrimary"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="@dimen/g_p_side"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/muli_extra_bold"
            android:background="?attr/selectableItemBackground"/>

    </LinearLayout>

</LinearLayout>